--- a/carbon.html
+++ b/carbon.html
@@ -89,7 +89,11 @@
 <img class="imgPage" src="assets\carbon\event.png">
 <img class="imgPage" src="assets\carbon\amvp.png">
 <img class="imgPage" src="assets\carbon\bottles.png">
-<img class="imgPage" src="assets\carbon\band.gif">
+<center>
+<video width="1040px" height="600px" autoplay loop muted>
+ <source src="assets\carbon\band.webm" type="video/webm">
+ </video>
+</center>
 <img class="imgPage" src="assets\carbon\part4.png">
 <img class="imgPage" src="assets\carbon\4dfwdt.png">
 <img class="imgPage" src="assets\carbon\back.png">
