--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div id="head">
   <p><b>Work in progress.</b><br>Please leave a message below.<br> <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a><br>
   <a href="about.html">About</a><br>
-	<a href="IvanC_Resume_022019.pdf">Resume</a>
+	<a href="Ivan-Chen-Resume_02.2023.pdf">Resume</a>
 
 
 </p>
