--- a/streetalk.html
+++ b/streetalk.html
@@ -68,22 +68,22 @@
 
 </div>
 
-<img class="imgPage" src="assets\StreeTalk\banner.gif">
+<img class="imgPage" src="assets\Streetalk\banner.gif">
 <div id="box">
   <p>A Palo Alto street corner is re-staged as a space for creative placemaking for residents, visitors, commuters, and students passing by. Framed by a basic set of rules, they are invited to address the simple prompt, what is your dream city? The ensuing responses become a conversation rooted in the intersection of thoughts, ideas, concerns and suggestions. The street corner turns into a lively universal agora. The final piece stands as an information tree and an unpredictable collective artwork in its own right. </p>
 </div>
 
-<img class="imgPage" src="assets\StreeTalk\04.png">
-<img class="imgPage" src="assets\StreeTalk\09.jpg">
-<img class="imgPage" src="assets\StreeTalk\05.jpg">
-<img class="imgPage" src="assets\StreeTalk\07.jpg">
-<img class="imgPage" src="assets\StreeTalk\10.jpg">
-<img class="imgPage" src="assets\StreeTalk\11.png">
-<img class="imgPage" src="assets\StreeTalk\08.jpg">
-<img class="imgPage" src="assets\StreeTalk\12.jpg">
-<img class="imgPage" src="assets\StreeTalk\01.jpg">
-<img class="imgPage" src="assets\StreeTalk\02.jpg">
-<img class="imgPage" src="assets\StreeTalk\03.jpg">
+<img class="imgPage" src="assets\Streetalk\04.png">
+<img class="imgPage" src="assets\Streetalk\09.jpg">
+<img class="imgPage" src="assets\Streetalk\05.jpg">
+<img class="imgPage" src="assets\Streetalk\07.jpg">
+<img class="imgPage" src="assets\Streetalk\10.jpg">
+<img class="imgPage" src="assets\Streetalk\11.png">
+<img class="imgPage" src="assets\Streetalk\08.jpg">
+<img class="imgPage" src="assets\Streetalk\12.jpg">
+<img class="imgPage" src="assets\Streetalk\01.jpg">
+<img class="imgPage" src="assets\Streetalk\02.jpg">
+<img class="imgPage" src="assets\Streetalk\03.jpg">
 
 </div>
 
