--- a/supersuper.html
+++ b/supersuper.html
@@ -68,7 +68,7 @@
 
 </div>
 
-<center><img class="imgPage" src="assets\supersuper\super.png"></center>
+<center><img class="imgPage" src="assets\supersuper\super.PNG"></center>
 <div id="box">
   <p>
 SuperSuper is a modular typeface inspired by Superstudio's concepts that emphasizes flexibility, modularity, and universality. The typeface consists of modular generic components found in 3D rendering software that can be combined in various ways to create different letters, numbers, and symbols. The type is simple and geometric, with clean lines and sharp angles that reflect the rational, minimalist approach of Superstudio's architectural designs. It features a limited color palette, with the modular components arranged in a way that creates an optical illusion of depth or movement.
@@ -93,7 +93,7 @@ SuperSuper is a modular typeface inspired by Superstudio's concepts that emphasi
 
 
 
-<img class="imgPage" src="assets\supersuper\s02.png">
+<img class="imgPage" src="assets\supersuper\s02.PNG">
 
 
 </div>
