--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ experimentations.</p>
 <p>	When he is not in the studio, he enjoys cooking, watching short
 films, and hiking. He is also applying for the NBA draft soon.</p>
 
-<p>	He is always looking forward to new opportunities. Give him a message <a href="mailto:contactivanchen@gmail.com"> here.</p>
+<p>	He is always looking forward to new opportunities. <br>Give him a message <a href="mailto:contactivanchen@gmail.com"> here.</p>
 
 
 </div>
