--- a/carbon.html
+++ b/carbon.html
@@ -87,6 +87,7 @@
 <br>
 <img class="imgPage" src="assets\carbon\cmc_title.png">
 <img class="imgPage" src="assets\carbon\event.png">
+<img class="imgPage" src="assets\carbon\carbon-posters.png">
 <img class="imgPage" src="assets\carbon\amvp.png">
 <img class="imgPage" src="assets\carbon\bottles.png">
 <center>
