--- a/cmc.html
+++ b/cmc.html
@@ -66,7 +66,14 @@
 
 </div>
 
-<img class="imgPage" src="assets\cmc\banner.gif">
+<center>
+<video width="1080px" height="300px" autoplay loop muted>
+ <source src="assets\cmc\cmc-loop.webm" type="video/webm">
+ </video>
+</center>
+
+<br>
+<br>
 <div id="box">
   <p>The Center for Malware Control stands out as a pioneering nonprofit organization that steadfastly champions the cause of internet safety and neutrality. Their unwavering commitment to making the internet a better and safer place is exemplified by their groundbreaking research, which is available to the public through open source. By sharing their research, the Center aims to empower and inspire individuals, organizations, and communities to take proactive measures to safeguard the internet from malicious software and preserve its neutrality.</p>
 </div>
