--- a/cmc.html
+++ b/cmc.html
@@ -17,7 +17,7 @@
 
 <!--title in bar of the browser-->
     <script language=javascript>
-      var title = new MovingTitle(" The Center for Malware Control stands out as a pioneering nonprofit organization that steadfastly champions the cause of internet safety and neutrality.", 110, 50);
+      var title = new MovingTitle(" The Center for Malware Research stands out as a pioneering nonprofit organization that steadfastly champions the cause of internet safety and neutrality.", 110, 50);
       title.init();
       function MovingTitle(writeText, interval, visibleLetters) {
         var _instance = {};
@@ -60,7 +60,7 @@
 
 
 <div id="head">
-  <p><a href="index.html">Back</a><br>Center for Malware Control<br>
+  <p><a href="index.html">Back</a><br>Center for Malware Research<br>
   Identity</p>
 
 
@@ -72,10 +72,8 @@
  </video>
 </center>
 
-<br>
-<br>
 <div id="box">
-  <p>The Center for Malware Control stands out as a pioneering nonprofit organization that steadfastly champions the cause of internet safety and neutrality. Their unwavering commitment to making the internet a better and safer place is exemplified by their groundbreaking research, which is available to the public through open source. By sharing their research, the Center aims to empower and inspire individuals, organizations, and communities to take proactive measures to safeguard the internet from malicious software and preserve its neutrality.</p>
+  <p>The Center for Malware Research stands out as a pioneering nonprofit organization that steadfastly champions the cause of internet safety and neutrality. Their unwavering commitment to making the internet a better and safer place is exemplified by their groundbreaking research, which is available to the public through open source. By sharing their research, the Center aims to empower and inspire individuals, organizations, and communities to take proactive measures to safeguard the internet from malicious software and preserve its neutrality.</p>
 </div>
 
 <img class="imgPage" src="assets\cmc\cmc_business_cards.png">
