--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p>
 	<br>
 	<a href="carbon.html">Carbon Inc.</a> <br>
-	<a href="cmc.html">Center for Mawlare Control Identity</a> <br>
+	<a href="cmc.html">Center for Mawlare Research</a> <br>
 	<a href="streetalk.html">StreeTalk Public Installation: Palo Alto</a> <br>
 	<a href="happy-times.html">Happy Times Restaurant Identity</a> <br>
 		<a href="fernweh.html">Fernweh: Experience Design/Illustration</a> <br>
