--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 <div id="head">
-  <p><b>Work in progress.</b><br>Please leave a message below.<br> <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a><br>
+  <p><b>Constant practice.</b><br>Please leave a message below.<br> <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a><br>
   <a href="about.html">About</a><br>
 	<a href="Ivan-Chen-Resume_02.2023.pdf">Resume</a>
 
@@ -81,6 +81,7 @@
 		<a href="cryptography.html">Cryptography Publication</a> <br>
 	<a href="noguchi.html">Noguchi's Playscapes Web</a> <br>
 <a href="wds.html">Watching: Designing for Surveillance </a> <br>
+<a href="renders.html">Various 3D Renders and Motion Graphics </a> <br>
 
 
 </p>
@@ -88,10 +89,5 @@
 
 </div>
 
-
-<div id="box">
-
-
-</div>
 
 </body>
