--- a/renders.html
+++ b/renders.html
@@ -66,7 +66,7 @@
 
 </div>
 
-<img class="imgPage" src="assets\renders\zendonut.jpg">
+
 <center>
 <video width="1040px" height="600px" autoplay loop muted>
  <source src="assets\renders\zendonut.webm" type="video/webm">
@@ -78,26 +78,36 @@
   </video>
 </center>
 
-<img class="imgPage" src="assets\renders\urfacefridge.png">
-<img class="imgPage" src="assets\renders\doorbell.jpg">
-
 <center>
 	 <br>
 <video width="1040px" height="600px" autoplay loop muted>
  <source src="assets\renders\lattice.webm" type="video/webm">
  </video>
 </center>
- <br>
-<img class="imgPage" src="assets\renders\desert.png">
-<img class="imgPage" src="assets\renders\ideas.png">
-<img class="imgPage" src="assets\renders\brutal.jpg">
-
+	 <br>
 <center>
 
 <video width="1040px" height="600px" autoplay loop muted>
  <source src="assets\renders\brutal.webm" type="video/webm">
  </video>
 </center>
+
+<center>
+<img class="imgPage" src="assets\renders\urfacefridge.png">
+
+<img class="imgPage" src="assets\renders\zendonut.jpg">
+
+<img class="imgPage" src="assets\renders\doorbell.jpg">
+
+
+	 <br>
+
+<img class="imgPage" src="assets\renders\desert.png">
+<img class="imgPage" src="assets\renders\ideas.png">
+<img class="imgPage" src="assets\renders\brutal.jpg">
+
+
+
 <br>
 <br>
 <br>
