--- a/renders.html
+++ b/renders.html
@@ -17,7 +17,7 @@
 
 <!--title in bar of the browser-->
     <script language=javascript>
-      var title = new MovingTitle(" Carbon® is a 3D printing technology company.", 110, 50);
+      var title = new MovingTitle(" Various render ideas.", 110, 50);
       title.init();
       function MovingTitle(writeText, interval, visibleLetters) {
         var _instance = {};
