--- a/happy-times.html
+++ b/happy-times.html
@@ -71,12 +71,12 @@
  </video>
 </center>
 <div id="box">
-  <p>This project is currently being updated. <br>The old work is still below!<br><br>Happy Times is a restaurant and tea house concept that offers a unique and authentic Chinese dining experience. Our brand is built around the idea of providing a warm and welcoming environment that encourages social interaction, where customers can enjoy our flavorful cuisine and make lasting memories with their loved ones. Our focus is on the social experience of Chinese cuisine, and we strive to make each visit a memorable one.
+<br>Happy Times is a restaurant and tea house concept that offers a unique and authentic Chinese dining experience. Our brand is built around the idea of providing a warm and welcoming environment that encourages social interaction, where customers can enjoy our flavorful cuisine and make lasting memories with their loved ones. Our focus is on the social experience of Chinese cuisine, and we strive to make each visit a memorable one.
 Come visit us in Oakland, California!</p>
 </div>
 
 <img class="imgPage" src="assets\happy-times\happy-times-new.png">
-<img class="imgPage" src="assets\happy-times\happy-times-splash.png">
+
 <img class="imgPage" src="assets\happy-times\happy-times-splash-2.png">
 <img class="imgPage" src="assets\happy-times\happy-times-menu-1.png">
 <img class="imgPage" src="assets\happy-times\happy-times-menu-2.png">
