--- a/happy-times.html
+++ b/happy-times.html
@@ -71,8 +71,8 @@
  </video>
 </center>
 <div id="box">
-<br>Happy Times is a restaurant and tea house concept that offers a unique and authentic Chinese dining experience. Our brand is built around the idea of providing a warm and welcoming environment that encourages social interaction, where customers can enjoy our flavorful cuisine and make lasting memories with their loved ones. Our focus is on the social experience of Chinese cuisine, and we strive to make each visit a memorable one.
-Come visit us in Oakland, California!</p>
+Happy Times is a restaurant and tea house concept that offers a unique and authentic Chinese dining experience. Our brand is built around the idea of providing a warm and welcoming environment that encourages social interaction, where customers can enjoy our flavorful cuisine and make lasting memories with their loved ones. Our focus is on the social experience of Chinese cuisine, and we strive to make each visit a memorable one.
+Come visit us in Oakland, California!<br><br>This project is currently being updated.</p>
 </div>
 
 <img class="imgPage" src="assets\happy-times\happy-times-new.png">
