--- a/about.html
+++ b/about.html
@@ -1,82 +1,62 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-<html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<script src="jquery-ui.js" crossorigin="anonymous"></script>
+    <title>Sensory Orders Archives</title>
 
-<script src="init.js"></script>
-<script src="index.js"></script>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<!--
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style.css" />
 
-  script from constant dullart -->
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+  </head>
 
-<link rel="stylesheet" href="home.css">
-    <script  src="index.js"></script>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-<!--title in bar of the browser-->
-    <script language=javascript>
-      var title = new MovingTitle(" This page is about me. All about me.", 110, 50);
-      title.init();
-      function MovingTitle(writeText, interval, visibleLetters) {
-        var _instance = {};
-        var _currId = 0;
-        var _numberOfLetters = writeText.length;
-        function updateTitle() {
-          _currId += 1;
-          if (_currId > _numberOfLetters - 1) {
-            _currId = 0;
-          }
-          var startId = _currId;
-          var endId = startId + visibleLetters;
-          var finalText;
-          if (endId < _numberOfLetters - 1) {
-            finalText = writeText.substring(startId, endId);
-          } else {
-            var cappedEndId = _numberOfLetters;
-            endId = endId - cappedEndId;
-            finalText = writeText.substring(startId, cappedEndId) + writeText.substring(0, endId);
-          }
-          document.title = finalText;
-        }
-        _instance.init = function() {
-          setInterval(updateTitle, interval);
-        };
-        return _instance;
-      }
-    </script>
-
-
-  <title>🌴🌴🌴ivan🌴🌴🌴</title>
-
-  </style>
-
-
-
-
-<body>
-<div id="info">
-  <p><a href="index.html">Back</a><br>
-
-
-
-</div>
-<div id="info2">
-	<p>Ivan Chen is a  designer born in China and
-	raised in San Francisco.</p>
-
-<p>	With curiousity, he explores the
-relationship between design and
-technology through graphic visual
-experimentations.</p>
-
-<p>	When he is not in the studio, he enjoys cooking, watching short
-films, and hiking. He is also applying for the NBA draft soon.</p>
-
-<p>	He is always looking forward to new opportunities. <br>Give him a message <a href="mailto:contactivanchen@gmail.com"> here.</p>
-
-
-</div>
-
-</body>
+  <body>
+    <div class="parent">
+      <div class="div1">
+        <p>
+          Sensory Orders is conceived around the premise of three “orders” – the
+          organic realm of human bodies and natural entities, the technological
+          realm of machines, and the symbolic realm of human culture. The
+          combination of global pandemic, political-economic fallout, continuing
+          ecological and the social-cultural crises have revealed how these
+          three orders more than ever sense, act on and affect each other.<br />
+          <br />
+          In such disarray, we are paradoxically empowered by a vast array of
+          communication and sensing tools. Centralized mass culture has given
+          way to uncharted micro spheres with an ability to engulf wider
+          spheres. Billions of sensors, devices and interfaces may give us a
+          sense of control over all aspects of our life and work, but no one, no
+          organization, no concept, nothing is protected from the virality of
+          ongoing disruptions. <br />
+          <br />If we can sense everything around us, we can never be sure if
+          and how the signal relates to the source. As thinkers and creators, we
+          act as agents of sensory transmissions, but what is the nature of our
+          subjects and how is our practice affected by the turmoil of our days?
+          How do we sense and literally make sense? Sensory Orders is a mix of
+          27 responses by visual and performing artists, anthropologists,
+          designers, sociologists, architects, historians of science, composers,
+          physicists, architects and other researchers from 15 countries and 4
+          continents. The perspectives reflect on a wide mix of human, technical
+          and biological forces. As such, they seek to demonstrate, how the
+          separation between human, animal, plant, machine and terrestrial is
+          not as great as we might think.
+        </p>
+      </div>
+      <div class="div2">
+        <div class="image-grid">
+          <div class="full-image">
+            <img
+              class="full-image"
+              src="https://cdn.glitch.global/c2d81a9e-8901-4474-a3b1-a834da7f48cb/So-Main.png?v=1699055215162"
+              alt="Your Image Description"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
