--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
 
           <br />Please leave a message below.
           <br />
-          <a href="http://m-a-d.com/">contactivanchen@gmail.com</a>  <br />
-          <a href="https://www.instagram.com/christopher_salter/"
-            >About</a>
+          <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a>  <br />
+          <a href="about.html">About</a>
           <br />
-          <a href="about.html">Resume</a>
+          <a href="Ivan Chen - Resume - 01.17.2025.pdf">Resume</a>
         </p>
 
         <p>
