--- a/cmc.html
+++ b/cmc.html
@@ -48,7 +48,7 @@
     <div class="parent">
       <div class="div1">
         <a href="index.html">Back</a>  <br />
-        <b>Carbon Inc.</b>
+        <b>Center for Malware Control</b>
         <br />
         Brand <br />
         <br />
