--- a/fernweh.html
+++ b/fernweh.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'>🖨️</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'></text>🎫</svg>">
 
     <!--title in bar of the browser-->
         <script language=javascript>
-          var title = new MovingTitle("   Carbon® is a 3D printing technology company based in Redwood City, CA.", 110, 50);
+          var title = new MovingTitle("   Traveling to a new place can be a challenging experience, especially when you are alone.", 110, 50);
           title.init();
           function MovingTitle(writeText, interval, visibleLetters) {
             var _instance = {};
