--- a/form.html
+++ b/form.html
@@ -73,6 +73,16 @@ At Form Energy, I contributed to the development and refinement of the brand ide
             />
             <img
               class="image"
+              src="assets/form/f2.png"
+              alt="Your Image Description"
+            />
+            <img
+              class="image"
+              src="assets/form/f1.png"
+              alt="Your Image Description"
+            />
+            <img
+              class="image"
               src="assets/form/form-factory-museum-1.png"
               alt="Your Image Description"
             />
