--- a/carbon.html
+++ b/carbon.html
@@ -88,7 +88,27 @@
               >
                 Your browser does not support the video tag.
               </video>
+              <img
+                class="image"
+                src="assets/carbon/carbon-posters.png"
+                alt="Your Image Description"
+              />
+              <img
+                class="image"
+                src="assets/carbon/books.png"
+                alt="Your Image Description"
+              />
 
+              <img
+                class="image"
+                src="assets/carbon/part4.png"
+                alt="Your Image Description"
+              />
+              <img
+                class="image"
+                src="assets/carbon/ideas.png"
+                alt="Your Image Description"
+              />
           <img
             class="image"
             src="assets/carbon/amvp.png"
@@ -99,16 +119,7 @@
             src="assets/carbon/uma-bottles.png"
             alt="Your Image Description"
           />
-          <img
-            class="image"
-            src="assets/carbon/carbon-posters.png"
-            alt="Your Image Description"
-          />
-          <img
-            class="image"
-            src="assets/carbon/books.png"
-            alt="Your Image Description"
-          />
+
           <video
               class="image"
               src="assets/carbon/lattice.webm"
