--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="home.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -76,12 +76,27 @@
           <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
 
           <a href="watching.html">Watching: Designing for Surveillance</a> <br />
+            <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
             <a href="cryptography.html">Cryptography 001 Publication</a> <br />
-    
+            <a href="renders.html">Various Renders</a> <br />
+
 
         </p>
       </div>
       <div class="div2">
+        <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
+<br>
+<br>
+Additionally, I explore how automation and algorithms influence communication and aesthetics through graphic and software design.
+
+<br>
+<br>
+Previously, I have worked with Carbon, Form Energy, M-A-D and collaborated on projects involving partners such as adidas, CCM, Ford, the city of Palo Alto, and Specialized.
+<br>
+<br>
+When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
+
+</p>
         <div class="image-grid">
 
         </div>
