--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <a href="watching.html">Watching: Designing for Surveillance</a> <br />
             <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
             <a href="cryptography.html">Cryptography 001 Publication</a> <br />
-        
+            <a href="renderings.html">Various 3D renderings / animations</a> <br />
+
 
 
         </p>
