--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 
         <p>
           <br />
+            <a href="carbon.html">Carbon Inc</a> <br />
           <a href="form.html">Form Energy</a> <br />
-          <a href="carbon.html">Carbon Inc</a> <br />
+
           <a href="cmc.html">Center for Malware Research</a>
           <br />
           <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br />
@@ -78,7 +79,7 @@
           <a href="watching.html">Watching: Designing for Surveillance</a> <br />
             <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
             <a href="cryptography.html">Cryptography 001 Publication</a> <br />
-            <a href="renderings.html">Various 3D renderings / animations</a> <br />
+            <a href="renders.html">Various 3D renderings / animations</a> <br />
 
 
 
