--- a/renders.html
+++ b/renders.html
@@ -53,7 +53,7 @@
 <br>
 <br>
         <p>
-          Created with Blender, and Unreal Engine 5 for. </br></br>
+          Created with Blender, and Unreal Engine 5. </br></br>
 
         </p>
       </div>
