--- a/form.html
+++ b/form.html
@@ -55,7 +55,7 @@
 
         <p>
 
-Form Energy is an American energy storage technology and manufacturing company that is developing and commercializing a pioneering iron-air battery capable of storing electricity for 100 hours </br></br>
+Form Energy is an American energy storage technology and manufacturing company that is developing and commercializing a pioneering iron-air battery capable of storing electricity for 100 hours. </br></br>
 
 At Form Energy, I contributed to the development and refinement of the brand identity, including branding for sub-brands and designing systems for safety signals, wayfinding, and trade show events. I created cohesive stationery and co-branded assets, ensuring consistency across all touchpoints. Additionally, I developed creative assets for product launches and collaborated on building a web-based hiring system, enhancing the company’s digital infrastructure and recruitment process.        </p>
       </div>
@@ -84,7 +84,7 @@ At Form Energy, I contributed to the development and refinement of the brand ide
             <img
               class="image"
               src="assets/form/form-factory-museum-1.png"
-        
+
             />
             <img
               class="image"
