--- a/alameda-county-port.html
+++ b/alameda-county-port.html
@@ -54,8 +54,9 @@
         <br />
 
         <p>
-        Hi there 👋 This page is currently locked while I wait for approval from previous employers to share the work publicly. It’ll be available on May 8, 2025, for the Minimum Qualifications review. In the meantime, feel free to explore the index for other projects. Thanks so much for your understanding.</br></br>
-
+        Hi there 👋 This page is currently locked while I wait for approval from previous employers to share the work publicly. It’ll be available on May 16, 2025, for the Portfolio review. In the meantime, feel free to explore the index for other projects. Thanks so much for your understanding.</br></br>
+<br>
+    <a href="cve-a.html">Common Vulnerabilities and Exposures</a> <br />
         </p>
       </div>
       <div class="div2">
