--- a/carbon.html
+++ b/carbon.html
@@ -61,7 +61,7 @@
       <div class="div2">
         <div class="image-grid">
           <video
-              class="image"
+              class="image2"
               src="assets/carbon/carbon-intro.webm"
               autoplay
               muted
@@ -70,17 +70,17 @@
               Your browser does not support the video tag.
             </video>
             <img
-              class="image"
+              class="image2"
               src="assets/carbon/carbon-factory.png"
               alt="Your Image Description"
             />
             <img
-              class="image"
+              class="image2"
               src="assets/carbon/ces-carbon.png"
               alt="Your Image Description"
             />
             <video
-                class="image"
+                class="image2"
                 src="assets/carbon/product-launch.webm"
                 autoplay
                 muted
@@ -89,33 +89,33 @@
                 Your browser does not support the video tag.
               </video>
               <img
-                class="image"
+                class="image2"
                 src="assets/carbon/carbon-posters.png"
                 alt="Your Image Description"
               />
               <img
-                class="image"
+                class="image2"
                 src="assets/carbon/books.png"
                 alt="Your Image Description"
               />
 
               <img
-                class="image"
+                class="image2"
                 src="assets/carbon/part4.png"
                 alt="Your Image Description"
               />
               <img
-                class="image"
+                class="image2"
                 src="assets/carbon/ideas.png"
                 alt="Your Image Description"
               />
           <img
-            class="image"
+            class="image2"
             src="assets/carbon/amvp.png"
             alt="Your Image Description"
           />
           <img
-            class="image"
+            class="image2"
             src="assets/carbon/uma-bottles.png"
             alt="Your Image Description"
           />
