--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="styles-00.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -68,7 +68,8 @@
             <a href="carbon.html">Carbon Inc</a> <br />
           <a href="form.html">Form Energy</a> <br />
 
-          <a href="cmc.html">Center for Malware Research</a>
+          <a href="cmc.html">Center for Malware Research</a><br />
+          <a href="cve.html">Common Vulnerabilities and Exposures</a>
           <br />
           <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br />
           <a href="fernweh.html">Fernweh: User Experience Design</a>
