--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="styles-00.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -63,7 +63,21 @@
           <a href="Ivan Chen - Resume - 01.17.2025.pdf">Resume</a>
         </p>
 
-        <p>
+  
+        <br>
+          <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
+  <br>
+  <br>
+  Additionally, I explore how automation and algorithms influence communication and aesthetics through graphic and software design.
+
+  <br>
+  <br>
+  Previously, I have worked with Carbon, Form Energy, M-A-D and collaborated on projects involving partners such as adidas, CCM, Ford, the city of Palo Alto, and Specialized.
+  <br>
+  <br>
+  When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
+
+  </p>
           <br />
             <a href="carbon.html">Carbon Inc</a> <br />
           <a href="form.html">Form Energy</a> <br />
@@ -87,19 +101,7 @@
         </p>
       </div>
       <div class="div2">
-        <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
-<br>
-<br>
-Additionally, I explore how automation and algorithms influence communication and aesthetics through graphic and software design.
 
-<br>
-<br>
-Previously, I have worked with Carbon, Form Energy, M-A-D and collaborated on projects involving partners such as adidas, CCM, Ford, the city of Palo Alto, and Specialized.
-<br>
-<br>
-When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
-
-</p>
         <div class="image-grid">
 
         </div>
