--- a/alameda-county-port.html
+++ b/alameda-county-port.html
@@ -53,17 +53,33 @@
         Alameda County <br />
         <br />
 
-        <p>
-        Hi there 👋 This page is currently locked while I wait for approval from previous employers to share the work publicly. It’ll be available on May 16, 2025, for the Portfolio review. In the meantime, feel free to explore the index for other projects. Thanks so much for your understanding.</br></br>
-<br>
+
     <a href="cve-a.html">Common Vulnerabilities and Exposures</a> <br />
+    <a href="carbon-a.html">Carbon Inc</a> <br />
+    <a href="form-a.html">Form Energy</a> <br />
+      <a href="streetalk-a.html">StreeTalk: Public Installation in Palo Alto</a> <br />
+          <a href="waygo-a.html">Waygo</a> <br />
+        <br />
         </p>
+        <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
+<br>
+<br>
+Additionally, I explore how automation and algorithms influence communication and aesthetics through graphic and software design.
+
+<br>
+<br>
+Previously, I have worked with Carbon, Form Energy, M-A-D and collaborated on projects involving partners such as adidas, CCM, Ford, the city of Palo Alto, and Specialized.
+<br>
+<br>
+When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
+
+</p>
       </div>
       <div class="div2">
 
-        </div>
       </div>
-      <!-- Add more images as needed -->
+        </div>
+
     </div>
   </body>
 </html>
