--- a/waygo-a.html
+++ b/waygo-a.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'>👾</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'>✈️</text></svg>">
 
     <!--title in bar of the browser-->
         <script language=javascript>
-          var title = new MovingTitle("   The Common Vulnerabilities and Exposures (CVE) system provides standardized identifiers for publicly known cybersecurity vulnerabilities. Maintained by the CVE Program and adopted globally by security vendors, researchers, and institutions, it serves as a core reference point for threat intelligence, vulnerability management, and coordinated disclosure.", 110, 50);
+          var title = new MovingTitle("   Waygo is an all-in-one travel wallet built for visitors in China. Backed by China Railway, it combines secure payments, transit passes, and real-time support into a single, easy-to-use app—no local bank account required.", 110, 50);
           title.init();
           function MovingTitle(writeText, interval, visibleLetters) {
             var _instance = {};
