--- a/noguchi.html
+++ b/noguchi.html
@@ -62,7 +62,7 @@ Based on the works by Isamu Noguchi.
       <div class="div2">
         <div class="image-grid">
           <video
-              class="full-video"
+              class="full-video-contain"
               src="assets/noguchi/browse.webm"
               autoplay
               muted
