--- a/watching.html
+++ b/watching.html
@@ -62,7 +62,7 @@
       <div class="div2">
         <div class="image-grid">
           <video
-              class="full-video"
+              class="full-video-contain"
               src="assets/watching/watching.webm"
               autoplay
               muted
