--- a/fernweh.html
+++ b/fernweh.html
@@ -68,47 +68,47 @@ Yichen Liu
         <div class="image-grid">
 
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-01.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-02.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-03.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-04.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-05.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-06.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-07.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-08.png"
               alt=""
             />
             <img
-              class="image"
+              class="image2"
               src="assets/fernweh/fernweh-09.png"
               alt=""
             />
