--- a/carbon-a.html
+++ b/carbon-a.html
@@ -79,6 +79,21 @@
               src="assets/carbon/ces-carbon.png"
               alt="Your Image Description"
             />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-2.jpg"
+              alt="Your Image Description"
+            />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-3.png"
+              alt="Your Image Description"
+            />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-4.png"
+              alt="Your Image Description"
+            />
             <video
                 class="image2"
                 src="assets/carbon/product-launch.webm"
