--- a/alameda-county-port.html
+++ b/alameda-county-port.html
@@ -47,7 +47,7 @@
   <body>
     <div class="parent">
       <div class="div1">
-        <a href="index.html">Index</a>  <br />
+        Index</a>  <br />
         <b>Project Selects</b>
         <br />
         Alameda County <br />
@@ -59,6 +59,7 @@
     <a href="form-a.html">Form Energy</a> <br />
       <a href="streetalk-a.html">StreeTalk: Public Installation in Palo Alto</a> <br />
           <a href="waygo-a.html">Waygo</a> <br />
+          <a href="index.html">Other works</a> <br />
         <br />
         </p>
         <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
