--- a/waygo-a.html
+++ b/waygo-a.html
@@ -61,11 +61,11 @@ Waygo is an all-in-one travel wallet built for visitors in China. Backed by Chin
   Powered by our partnership with China Railway this warm guided flow collects just what we need: passport photo, face scan and payment method in three simple steps. Friendly prompts and visible progress indicators make every interaction feel natural so you are ready to pay and ride in minutes.
 </p><br>
 <p>
-  <span style="font-weight: 500;">2. One Wallet All Rides</span><br>
+  <span style="font-weight: 500;">2. All-in-One Travel Wallet</span><br>
 Tap once to switch between your payment balance and city transit passes including metro bus airport express and high-speed rail all within a single screen. Everything you need to travel with confidence in one
 </p><br>
 <p>
-<span style="font-weight: 500;">3. QR Pay Everywhere</span><br>
+<span style="font-weight: 500;">3. Scan to Pay Anywhere</span><br>
 Whether you are grabbing street food or dining in a restaurant our universal scanner and your dynamic pay code work seamlessly with WeChat Pay Alipay and other popular platforms thanks to standardized QR codes. No change needed simply point tap and go.
 </p><br>
 <p>
