--- a/form-a.html
+++ b/form-a.html
@@ -86,11 +86,26 @@ At Form Energy, I contributed to the development and refinement of the brand ide
               src="assets/form/form-factory-museum-1.png"
 
             />
+
             <img
               class="image2"
+              src="assets/form/form-factory-museum-mock.jpg"
+
+            />
+            <img
+              class="image"
               src="assets/form/form-factory-museum-2.png"
               alt="Your Image Description"
             />
+            <video
+                class="video"
+                src="assets/form/form-factory-panels.webm"
+                autoplay
+                muted
+                loop
+              >
+                Your browser does not support the video tag.
+              </video>
             <img
               class="image2"
               src="assets/form/form-factory-lobby.jpg"
