--- a/form-a.html
+++ b/form-a.html
@@ -106,6 +106,24 @@ At Form Energy, I contributed to the development and refinement of the brand ide
               >
                 Your browser does not support the video tag.
               </video>
+              <video
+                  class="video2"
+                  src="assets/form/form-posters.webm"
+                  autoplay
+                  muted
+                  loop
+                >
+                  Your browser does not support the video tag.
+                </video>
+                <video
+                    class="video2"
+                    src="assets/form/form-posters-2.webm"
+                    autoplay
+                    muted
+                    loop
+                  >
+                    Your browser does not support the video tag.
+                  </video>
             <img
               class="image2"
               src="assets/form/form-factory-lobby.jpg"
