--- a/carbon.html
+++ b/carbon.html
@@ -47,7 +47,7 @@
   <body>
     <div class="parent">
       <div class="div1">
-        <a href="index.html">Back</a>  <br />
+        <a href="alameda-county-port.html">Back</a>  <br />
         <b>Carbon Inc.</b>
         <br />
         Brand <br />
@@ -77,6 +77,21 @@
             <img
               class="image2"
               src="assets/carbon/ces-carbon.png"
+              alt="Your Image Description"
+            />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-2.jpg"
+              alt="Your Image Description"
+            />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-3.png"
+              alt="Your Image Description"
+            />
+            <img
+              class="image2"
+              src="assets/carbon/ces-carbon-4.png"
               alt="Your Image Description"
             />
             <video
@@ -135,11 +150,6 @@
             alt="Your Image Description"
           />
 
-          <img
-            class="full-image"
-            src="assets/carbon/back.png"
-            alt="Your Image Description"
-          />
 
         </div>
       </div>
