--- a/index.html
+++ b/index.html
@@ -79,19 +79,25 @@
 
   </p>
           <br />
+          BRAND
+          <br />
             <a href="carbon.html">Carbon Inc</a> <br />
           <a href="form.html">Form Energy</a> <br />
-          <a href="cve.html">Common Vulnerabilities and Exposures</a>
-          <br />
+          <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/><br />
+USER EXPERIENCES<br />
+  <a href="waygo-a.html">Waygo</a> <br />
           <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br />
-          <a href="fernweh.html">Fernweh: User Experience Design</a>
+          <a href="fernweh.html">Fernweh</a>
           <br />
+<br />
+          WEB EXPERIMENTAL<br />
               <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
           <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
 
           <a href="watching.html">Watching: Designing for Surveillance</a> <br />
             <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
-            <a href="cryptography.html">Cryptography 001 Publication</a> <br />
+            <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
+            OTHER<br />
             <a href="renders.html">Various 3D renderings / animations</a> <br />
 
 
