--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
           BRAND
           <br />
             <a href="carbon.html">Carbon Inc</a> <br />
+            <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/><br />
           <a href="form.html">Form Energy</a> <br />
-          <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/><br />
-USER EXPERIENCES<br />
+
+USER EXPERIENCE<br />
   <a href="waygo-a.html">Waygo</a> <br />
           <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br />
           <a href="fernweh.html">Fernweh</a>
