--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           BRAND
           <br />
             <a href="carbon.html">Carbon Inc</a> <br />
-            <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/><br />
+            <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
           <a href="form.html">Form Energy</a> <br />
 
 USER EXPERIENCE<br />
