--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
           <br />
             <a href="carbon.html">Carbon Inc</a> <br />
             <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
-          <a href="form.html">Form Energy</a> <br />
+          <a href="form.html">Form Energy</a> <br /><br />
 
 USER EXPERIENCE<br />
-  <a href="waygo-a.html">Waygo</a> <br />
-          <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br />
-          <a href="fernweh.html">Fernweh</a>
-          <br />
+  <a href="waygo-a.html">Waygo</a> <br/>
+  <a href="fernweh.html">Fernweh</a><br />
+          <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
+
+
 <br />
           WEB EXPERIMENTAL<br />
               <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
