--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index-style.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -54,7 +54,34 @@
     <div class="parent">
       <div class="div1">
         <p>
-          <b>Index</b>
+          <b>WORK</b>    <br />    <br />
+        BRAND
+        <br />
+          <a href="carbon.html">Carbon Inc</a> <br />
+          <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
+        <a href="form.html">Form Energy</a> <br /><br />
+
+USER EXPERIENCE<br />
+<a href="waygo-a.html">Waygo</a> <br/>
+<a href="fernweh.html">Fernweh</a><br />
+        <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
+
+
+<br />
+        WEB EXPERIMENTAL<br />
+            <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
+        <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
+
+        <a href="watching.html">Watching: Designing for Surveillance</a> <br />
+          <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
+          <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
+          OTHER<br />
+          <a href="renders.html">Various 3D renderings / animations</a> <br />
+            </div>
+      <div class="div2">
+        <p>
+          <b>INFO</b>
+            <br />
 
           <br />Please leave a message below.
           <br />
@@ -78,37 +105,9 @@
   When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
 
   </p>
-          <br />
-          BRAND
-          <br />
-            <a href="carbon.html">Carbon Inc</a> <br />
-            <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
-          <a href="form.html">Form Energy</a> <br /><br />
-
-USER EXPERIENCE<br />
-  <a href="waygo-a.html">Waygo</a> <br/>
-  <a href="fernweh.html">Fernweh</a><br />
-          <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
-
-
-<br />
-          WEB EXPERIMENTAL<br />
-              <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
-          <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
-
-          <a href="watching.html">Watching: Designing for Surveillance</a> <br />
-            <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
-            <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
-            OTHER<br />
-            <a href="renders.html">Various 3D renderings / animations</a> <br />
-
-
-
-        </p>
       </div>
-      <div class="div2">
+    </div>
 
-        <div class="image-grid">
 
         </div>
       </div>
