--- a/index.html
+++ b/index.html
@@ -1,257 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ACSSA – We're here to help</title>
-  <link rel="stylesheet" href="css/tokens.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
-</head>
-<body>
-<a class="visually-hidden" href="#main">Skip to main content</a>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<header class="appbar">
-  <div class="container appbar__row">
-    <div class="appbar__logo"><img src="assets/img/acssa-logo.png" alt="Alameda County Social Services Agency"></div>
-    <form class="appbar__search" role="search" aria-label="Site search">
-      <input type="search" placeholder="Search services, forms…" />
-    </form>
-    <nav class="appbar__actions" aria-label="Utilities">
-      <button class="button button--text" id="langBtn">English ▾</button>
-      <button class="button button--text" id="contrastBtn" aria-pressed="false">Contrast</button>
-      <a class="button button--text" href="tel:+15102632420">☎ (510) 263-2420</a>
-      <a class="button button--tonal" href="#">Sign in</a>
-    </nav>
-    <div class="appbar__mobile-actions">
-      <button class="appbar__search-icon" aria-label="Search"><span class="material-symbols-outlined">search</span></button>
-      <button class="appbar__menu-icon" aria-label="Menu">☰</button>
-    </div>
-  </div>
-</header>
 
-<main id="main">
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero__wrap">
-      <div class="hero__text">
-        <h1>ACSSA is here to help.</h1>
-        <p>Access food, housing, health, and job support online — fast, private, and mobile-friendly.</p>
-        <div class="hero__ctas">
-          <a class="button button--primary" href="#">Check eligibility</a>
-          <a class="button button--outlined" href="#">Apply now</a>
-          <a class="button button--text" href="#">Find services near me</a>
-        </div>
-        <p class="hero__reassure">Takes ~12–15 minutes · Works on your phone</p>
-      </div>
-      <div class="hero__image"><img src="assets/img/home-hero-image.jpg" alt="Community members accessing social services"></div>
-    </div>
-  </section>
+    <script language=javascript>
+      var title = new MovingTitle(" Ivan Chen is a designer from San Francisco.", 110, 50);
+      title.init();
+      function MovingTitle(writeText, interval, visibleLetters) {
+        var _instance = {};
+        var _currId = 0;
+        var _numberOfLetters = writeText.length;
+        function updateTitle() {
+          _currId += 1;
+          if (_currId > _numberOfLetters - 1) {
+            _currId = 0;
+          }
+          var startId = _currId;
+          var endId = startId + visibleLetters;
+          var finalText;
+          if (endId < _numberOfLetters - 1) {
+            finalText = writeText.substring(startId, endId);
+          } else {
+            var cappedEndId = _numberOfLetters;
+            endId = endId - cappedEndId;
+            finalText = writeText.substring(startId, cappedEndId) + writeText.substring(0, endId);
+          }
+          document.title = finalText;
+        }
+        _instance.init = function() {
+          setInterval(updateTitle, interval);
+        };
+        return _instance;
+      }
+    </script>
 
-  <!-- QUICK ACTIONS -->
-  <section class="section container">
-    <h2>Do it quickly</h2>
-    <div class="grid grid--three">
-      <a class="card" href="#"><h3>Upload documents</h3></a>
-      <a class="card" href="#"><h3>Track application</h3></a>
-      <a class="card" href="#"><h3>Book appointment</h3></a>
-      <a class="card" href="#"><h3>Replace card</h3></a>
-      <a class="card" href="#"><h3>Report a change</h3></a>
-      <a class="card" href="#"><h3>Contact a worker</h3></a>
-    </div>
-  </section>
 
-  <!-- LIFE EVENTS -->
-  <section class="section container">
-    <h2>Get help by life event</h2>
-    <div class="grid grid--three life-events">
-      <a class="card card--outlined" href="#"><h3>Lost your job</h3></a>
-      <a class="card card--outlined" href="#"><h3>Food help</h3></a>
-      <a class="card card--outlined" href="#"><h3>Housing help</h3></a>
-      <a class="card card--outlined" href="#"><h3>Aging & disability</h3></a>
-      <a class="card card--outlined" href="#"><h3>Having a baby</h3></a>
-      <a class="card card--outlined" href="#"><h3>Start guide</h3></a>
-    </div>
-  </section>
+  <title>🌴🌴🌴ivan🌴🌴🌴</title>
+  <link
+    rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.95em' font-size='80'>🌎</text></svg>"
+  />
 
-  <!-- OUR SERVICES -->
-  <section class="section container">
-    <h2>Our services</h2>
-    <div class="grid grid--three">
-      <article class="card card--service card--service-aging">
-        <div class="card__image" style="background-image: url('assets/img/services/Adult & Aging Services.png')"></div>
-        <div class="card__content">
-          <h3>Adult & Aging Services</h3>
-          <p>Protects, supports, and advocates for older adults & people with disabilities.</p>
-          <a href="#">→ Find care and community support</a>
-        </div>
-      </article>
-      <article class="card card--service card--service-children">
-        <div class="card__image" style="background-image: url('assets/img/services/children-family-service.jpg')"></div>
-        <div class="card__content">
-          <h3>Children & Family Services</h3>
-          <p>Improves the lives of children and families impacted by abuse or neglect.</p>
-          <a href="#">→ Access care for children and families</a>
-        </div>
-      </article>
-      <article class="card card--service card--service-workforce">
-        <div class="card__image" style="background-image: url('assets/img/services/Workforce & Benefits.jpg')"></div>
-        <div class="card__content">
-          <h3>Workforce & Benefits</h3>
-          <p>Employment services and public benefits delivered with compassion.</p>
-          <a href="#">→ Get support for work and wellbeing</a>
-        </div>
-      </article>
-    </div>
-  </section>
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="index-style.css" />
 
-  <!-- HOW IT WORKS -->
-  <section class="section container">
-    <h2>How it works</h2>
-    <div class="accordion">
-      <details class="accordion__item">
-        <summary class="accordion__header">
-          <span class="accordion__number">1</span>
-          <span class="accordion__title">Answer a few questions</span>
-          <span class="accordion__icon">▼</span>
-        </summary>
-        <div class="accordion__content">
-          <p>Tell us about your situation and what kind of help you're looking for. Whether you need support with food, health coverage, housing, or employment, your answers help us find the right programs for you.</p>
-        </div>
-      </details>
-      <details class="accordion__item">
-        <summary class="accordion__header">
-          <span class="accordion__number">2</span>
-          <span class="accordion__title">Upload documents online</span>
-          <span class="accordion__icon">▼</span>
-        </summary>
-        <div class="accordion__content">
-          <p>Submit your documents such as ID, proof of income, or residency directly from your phone or computer. This helps us verify your information quickly so your application can move forward.</p>
-        </div>
-      </details>
-      <details class="accordion__item">
-        <summary class="accordion__header">
-          <span class="accordion__number">3</span>
-          <span class="accordion__title">Track status and messages</span>
-          <span class="accordion__icon">▼</span>
-        </summary>
-        <div class="accordion__content">
-          <p>Stay updated as your application progresses. You can view real-time updates, receive messages from your caseworker, and know when your benefits are ready.</p>
-          <a href="#" class="button button--primary" style="margin-top: var(--space-3);">Get started</a>
-        </div>
-      </details>
-    </div>
-  </section>
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+  </head>
 
-  <!-- KEY METRICS -->
-  <section class="section container">
-    <h2>FY23–24 achievements</h2>
-    <div class="metrics">
-      <div class="metric">
-        <div class="metric__number"><span data-count="100000">100,000</span>+</div>
-        <p class="metric__description">People served across all programs</p>
-        <p class="metric__source">FY23-24 Annual Report</p>
-      </div>
-      <div class="metric">
-        <div class="metric__number">+<span data-count="36">36</span>%</div>
-        <p class="metric__description">Increase in online applications</p>
-        <p class="metric__source">Digital Services Report</p>
-      </div>
-      <div class="metric">
-        <div class="metric__number"><span data-count="176851">176,851</span></div>
-        <p class="metric__description">Shelter nights provided</p>
-        <p class="metric__source">Housing Services Data</p>
-      </div>
-      <div class="metric">
-        <div class="metric__number">$<span data-count="5.94">5.94</span>M</div>
-        <p class="metric__description">In childcare relief distributed</p>
-        <p class="metric__source">Children & Family Services</p>
+  <body>
+    <div class="parent">
+      <div class="div1">
+        <p>
+          <b>WORK</b>    <br />    <br />
+        BRAND
+        <br />
+          <a href="carbon.html">Carbon Inc</a> <br />
+          <a href="cve.html">Common Vulnerabilities and Exposures</a>  <br/>
+        <a href="form.html">Form Energy</a> <br /><br />
+
+USER EXPERIENCE<br />
+<a href="waygo-a.html">Waygo</a> <br/>
+<a href="fernweh.html">Fernweh</a><br />
+        <a href="streetalk.html">StreeTalk: Public Installation in Palo Alto</a> <br/>
+
+
+<br />
+        WEB EXPERIMENTAL<br />
+            <a href="noguchi.html">Noguchi's Playscapes Web</a> <br />
+        <a href="super.html">SuperSuper: Modular Generated Typeface</a> <br />
+
+        <a href="watching.html">Watching: Designing for Surveillance</a> <br />
+          <a href="https://hosting-ivn.github.io/tiiime/">Tiiime: Typographic Clock</a> <br />
+          <a href="cryptography.html">Cryptography 001 Publication</a> <br /><br />
+          OTHER<br />
+          <a href="renders.html">Various 3D renderings / animations</a> <br />
+            </div>
+      <div class="div2">
+        <p>
+          <b>INFO</b>
+            <br />
+
+          <br />Please leave a message below.
+          <br />
+          <a href="mailto:contactivanchen@gmail.com">contactivanchen@gmail.com</a>  <br />
+
+          <a href="Ivan Chen - Resume - 01.17.2025.pdf">Resume</a>
+        </p>
+
+
+        <br>
+          <p>Hi! I'm Ivan, a designer from San Francisco passionate about shaping a more sustainable future through thoughtful design.
+  <br>
+  <br>
+  Additionally, I explore how automation and algorithms influence communication and aesthetics through graphic and software design.
+
+  <br>
+  <br>
+  Previously, I have worked with Carbon, Form Energy, M-A-D and collaborated on projects involving partners such as adidas, CCM, Ford, the city of Palo Alto, and Specialized.
+  <br>
+  <br>
+  When I’m not designing, you can find me hanging out with my Maltese, Sophie, and exploring fashion design.
+
+  </p>
       </div>
     </div>
-  </section>
 
-  <!-- TESTIMONIAL -->
-  <section class="section container">
-    <div class="testimonial">
-      <div class="testimonial__slides">
-        <!-- Slide 1 -->
-        <div class="testimonial__slide testimonial__slide--active">
-          <div class="testimonial__photo">
-            <img src="assets/img/stories/story-1.jpg" alt="James Jackson, Oakland">
-          </div>
-          <div class="testimonial__content">
-            <p>"My vision and mobility challenges made market visits daunting. The process was easy and put me at ease, and fresh groceries arrive at my door with no fuss."</p>
-            <footer>
-              James Jackson, Oakland<br>
-              Adult & Aging Services
-            </footer>
-            <a class="button button--primary" href="#">Find care and community support</a>
-          </div>
-        </div>
-        <!-- Slide 2 -->
-        <div class="testimonial__slide">
-          <div class="testimonial__photo">
-            <img src="assets/img/stories/story-2.jpg" alt="Sofia Moreau, Oakland">
-          </div>
-          <div class="testimonial__content">
-            <p>"As a single mother, I was struggling to keep up after losing my job. My caseworker helped me apply for food support and guided me through job training. Having someone who listened and understood made me feel like I wasn't alone."</p>
-            <footer>
-              Sofia Moreau, Oakland<br>
-              Workforce & Benefits
-            </footer>
-            <a class="button button--primary" href="#">Get support for work and wellbeing</a>
-          </div>
-        </div>
-        <!-- Slide 3 -->
-        <div class="testimonial__slide">
-          <div class="testimonial__photo">
-            <img src="assets/img/stories/story-3.jpg" alt="The Ramirez-Johnson Family">
-          </div>
-          <div class="testimonial__content">
-            <p>"We were turned away from so many places because the rent was too high. Our caseworker helped us apply for assistance and find an affordable home that fit our family's needs. Moving in felt like starting over with a real sense of stability."</p>
-            <footer>
-              The Ramirez-Johnson Family, Hayward<br>
-              Children & Family Services
-            </footer>
-            <a class="button button--primary" href="#">Access care for children and families</a>
-          </div>
+
         </div>
       </div>
-      <!-- Dot Navigation -->
-      <div class="testimonial__dots">
-        <button class="testimonial__dot testimonial__dot--active" aria-label="View testimonial 1" data-slide="0"></button>
-        <button class="testimonial__dot" aria-label="View testimonial 2" data-slide="1"></button>
-        <button class="testimonial__dot" aria-label="View testimonial 3" data-slide="2"></button>
-      </div>
     </div>
-  </section>
-
-  <!-- HELP BAR -->
-  <section class="helpbar">
-    <div class="container helpbar__row">
-      <p>Need help now?</p>
-      <a class="button button--primary" href="#">Chat</a>
-      <a class="button button--tonal" href="tel:+15102632420">Call</a>
-      <a class="button button--text" href="#">Find a location</a>
-      <a class="button button--text" href="#">Request call-back</a>
-    </div>
-  </section>
-</main>
-
-<footer class="footer">
-  <div class="container footer__grid">
-    <nav aria-label="Footer">
-      <a href="#">Accessibility</a> · <a href="#">Privacy</a> · <a href="#">Languages</a> · <a href="#">Non-discrimination</a>
-    </nav>
-    <p>© Alameda County Social Services Agency</p>
-  </div>
-</footer>
-
-<button class="fab" aria-label="Open chat">💬</button>
-
-<script src="js/a11y.js"></script>
-<script src="js/ui.js"></script>
-</body>
+  </body>
 </html>
